--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
                     <p class="mb-0">Happy Clients</p>
                 </div>
                 <div class="col-lg-2 col-sm-6">
-                    <h1 class="display-4">1000+</h1>
-                    <p class="mb-0">Passout Student</p>
+                    <h1 class="display-4">1990+</h1>
+                    <p class="mb-0">Project Completed</p>
                 </div>
                 <div class="col-lg-2 col-sm-6">
                     <h1 class="display-4">100+</h1>
-                    <p class="mb-0">Current Student</p>
+                    <p class="mb-0">Projects We Are Working On</p>
                 </div>
             </div>
         </div>
