--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
                         </p>
                         <div style="margin-top: 0px;">
                             <a href="https://api.whatsapp.com/send?phone=9924560759&text=Hello I want to know more about Red Kitchen"
-                                class="btn-brand ms-lg-3 mt-4" style="padding: 10px 15px;border-radius: 5px;">Book Appointment</a>
+                                class="btn-brand ms-lg-3 mt-4" style="padding: 10px 15px;border-radius: 5px;">Book
+                                Appointment</a>
                         </div>
                     </div>
                 </div>
@@ -186,7 +187,8 @@
                         </p>
                         <div style="margin-top: 0px;">
                             <a href="https://api.whatsapp.com/send?phone=9924560759&text=Hello I want to know more about Red Kitchen"
-                                class="btn-brand ms-lg-3 mt-4" style="padding: 10px 15px;border-radius: 5px;">Book Appointment</a>
+                                class="btn-brand ms-lg-3 mt-4" style="padding: 10px 15px;border-radius: 5px;">Book
+                                Appointment</a>
                         </div>
                     </div>
                 </div>
@@ -198,7 +200,8 @@
                         </p>
                         <div style="margin-top: 0px;">
                             <a href="https://api.whatsapp.com/send?phone=9924560759&text=Hello I want to know more about Red Kitchen"
-                                class="btn-brand ms-lg-3 mt-4" style="padding: 10px 15px;border-radius: 5px;">Book Appointment</a>
+                                class="btn-brand ms-lg-3 mt-4" style="padding: 10px 15px;border-radius: 5px;">Book
+                                Appointment</a>
                         </div>
                     </div>
                 </div>
@@ -210,7 +213,8 @@
                         </p>
                         <div style="margin-top: 0px;">
                             <a href="https://api.whatsapp.com/send?phone=9924560759&text=Hello I want to know more about Red Kitchen"
-                                class="btn-brand ms-lg-3 mt-4" style="padding: 10px 15px;border-radius: 5px;">Book Appointment</a>
+                                class="btn-brand ms-lg-3 mt-4" style="padding: 10px 15px;border-radius: 5px;">Book
+                                Appointment</a>
                         </div>
                     </div>
                 </div>
@@ -222,7 +226,8 @@
                         </p>
                         <div style="margin-top: 0px;">
                             <a href="https://api.whatsapp.com/send?phone=9924560759&text=Hello I want to know more about Red Kitchen"
-                                class="btn-brand ms-lg-3 mt-4" style="padding: 10px 15px;border-radius: 5px;">Book Appointment</a>
+                                class="btn-brand ms-lg-3 mt-4" style="padding: 10px 15px;border-radius: 5px;">Book
+                                Appointment</a>
                         </div>
                     </div>
                 </div>
@@ -272,10 +277,16 @@
                             consultations to discuss your project and provide a quote tailored to your
                             requirements.</p>
                         <div class="col-auto social-icons">
-                            <a href="https://www.facebook.com/redkitcheninterio" target="_blank"><i class='bx bxl-facebook'></i></a>
-                            <a href="https://twitter.com/Red_kitchen01" target="_blank"><i class='bx bxl-twitter'></i></a>
-                            <a href="https://instagram.com/redkitchen_interio?igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><i class='bx bxl-instagram'></i></a>
-                            <a href="https://www.linkedin.com/in/red-kitchen-3b646a294/" target="_blank"><i class='bx bxl-pinterest'></i></a>
+                            <a href="https://www.facebook.com/redkitcheninterio" target="_blank"><i
+                                    class='bx bxl-facebook'></i></a>
+                            <a href="https://twitter.com/Red_kitchen01" target="_blank"><i
+                                    class='bx bxl-twitter'></i></a>
+                            <a href="https://instagram.com/redkitchen_interio?igshid=OGQ5ZDc2ODk2ZA=="
+                                target="_blank"><i class='bx bxl-instagram'></i></a>
+                            <a href="https://www.linkedin.com/in/red-kitchen-3b646a294/" target="_blank"><i
+                                    class='bx bxl-pinterest'></i></a>
+                            <a href="https://maps.app.goo.gl/4VD1QLEFtLswgEKY9" target="_blank"><img
+                                    src="./img/maps-and-flags.png" style="width: 40% !important;" alt=""></a>
                         </div>
                     </div>
                 </div>
